Update providerPortofolio
